# getserviceip

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: release-plz.yml  rust.yml
src/: bin.rs  lib.rs
tests/: health_check.rs  ip.rs  list.rs  state.rs
tests/common/: mod.rs
